# ums_fiction_driver

./: .gitignore  CMakeLists.txt  car_motion_control.cpp  package.xml  readme.md
include/: entity.hpp  ums_serial_methods.hpp
include/ums/: crc.h  params.h
launch/: ums_fiction_mini.launch.py  ums_fiction_v1.launch.py
param/: 4.yaml  fiction.yaml  mini.yaml
script/: create_udev.sh  ums.rules
src/: ums_fiction_driver_node.cpp
